# moments-dnns

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Complements on boundary conditions, dataset, epsilon.ipynb  Complements on fully-connected networks.ipynb  Complements on the effect of width, boundary conditions, dataset, epsilon.ipynb  Complements on width, boundary conditions, dataset, epsilon.ipynb  Makefile  README.md  Reproducing Fig. 2, 3, 4, 5.ipynb  main.py  manage_experiments.py  plots.py  pyproject.toml  requirements.txt  run_experiment.py  setup.cfg  setup.py
.github/workflows/: main.yml  pre-commit.yml  test.yml
moments_dnns/: __init__.py  computation_layers.py  main_utils.py  manage_experiments.py  models.py  plot_utils.py  plots.py  propagation_layers.py  run_experiment.py
notebooks/: Complements on fully-connected networks.ipynb  Complements on width, boundary conditions, dataset, epsilon.ipynb  Reproducing Fig. 2, 3, 4, 5.ipynb
npy/BN_FF/: chi_loc3.npy  chi_loc4.npy  nu1_abs_signal_loc3.npy
npy/BN_FF_FC_128/: chi_loc1.npy  chi_loc3.npy  chi_loc4.npy  depth.npy  mu4_signal_loc3.npy  reff_noise_loc4.npy
npy/BN_FF_FC_512/: chi_loc1.npy  (+3 more)
npz/: bn_ff_epsilon.npz  bn_ff_fc_128.npz  bn_ff_fc_256.npz  bn_ff_fc_512.npz  bn_ff_fc_64.npz  bn_ff_mnist.npz  bn_ff_zero_padding.npz  bn_res_fc.npz  vanilla_fc.npz  vanilla_histo.npz  vanilla_histo_512.npz  vanilla_histo_fc.npz  vanilla_symmetric.npz  vanilla_zero_padding.npz
tests/: __init__.py  test_dummy.py  test_models.py  test_plots.py  test_prune_experiments.py  test_run_experiment.py
(+87 files in other folders)
